--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
     "react-native": "0.76.2",
+    "react-native-gesture-handler": "^2.21.2",
     "react-native-onboarding-swiper": "^1.3.0",
+    "react-native-reanimated": "^3.16.3",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^4.3.0",
     "react-native-swiper": "^1.6.0"
